  config system.

* InputRunner now handles message decoding and delivery to the router,
  according to the specifications of the input's configuration. This is
  accomplished either directly via the `Deliver` method or, in cases where
  decoding might need to happen in separate goroutines, through `Deliverer`
  objects available from the `NewDeliverer` method.

* Hekad and all clients started using stdio for informational messages and
  stderr for error messages.

* Stats Accum Input treats gauge inputs as float64 rather than int64 to match
  statsd spec and other statsd implementations (#850).

* Introduction of Splitter plugins, accompanied by major changes to how input
  plugins work to support the use of Splitter plugins. (#424)

Bug Handling
------------

* Fix the shutdown hang caused by a Filter/Output plugin failure (#1324).

* Fix the RPM dependency errors on Centos7 (#1311).

* Don't output empty messages when use_framing = true (#1326).

* KafkaInput uses the oldest offset available instead of zero when no
  checkpoint file exists and the offset method is set to manual. KafkaInput
  also correctly closes the checkpoint file before removing it when it is
  invalid (#1325).

* Handle empty byte fields in the sandbox interface (#1284).

* Reset header when discarding valid but oversized messages (#1221).

* Prevent the protobuf stream encoder from creating messages over
  MAX_MESSAGE_SIZE (#1204).

* AMQPOutput now uses defined constants for delivery mode instead of hard
  coded (and wrong) integer values (#1235).

* Hekad now respects --config parameter and loads default config path
  instead of printing help and exit (#1239).

* MessageProtoParser now handles EOF gracefully, and returns all
  complete records up to the end of the stream without having to
  use GetRemainingData() (#1305).

* HttpListenInput no longer URL unescapes the HTTP request body (#1124).

* SmtpOutput now encodes email subject when necessary (#1277).

Features
--------
